# picostation

./: .gitignore  CMakeLists.txt  README.md  cmd.c  cmd.h  hw_config.c  i2s.c  i2s.h  main.c  main.pio  subq.c  subq.h  utils.c  utils.h  values.h
FatFs_SPI/ff14a/source/: ffconf.h  ffsystem.c
FatFs_SPI/sd_driver/: hw_config.h  sd_card.h  spi.c
FatFs_SPI/src/: glue.c
